--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -177,6 +177,26 @@
             i, .fa
                 margin: 0
 
+    // Widgets
+    .widget
+        &.widget-related
+            .item
+                .text
+                    position: absolute
+                    bottom: 10px
+                    padding: 10px 20px
+                    background: rgba(255, 255, 255, 0.7)
+                    display: inline-block
+                    width: 100%
+                    transition: all 0.5s ease-in-out
+                    overflow: hidden
+                    max-height: calc(100% - 20px)
+                    &:hover
+                        color: inherit
+                &:hover
+                    .text
+                        background: rgba(255, 255, 255, 0.85)
+
     /* Content */
     .table-block.page-title
         .responsive-block
