Адаптивность инормации о странице

--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -355,6 +355,10 @@ body
         font-size: em(13px)
         &:last-child
             margin-right: 0
+    .clearfix
+        display: none
+        float: none
+        margin: 0
     a, a span
         color: $dark-gray-color
     a:hover, a:hover span, a:hover i,
