--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -287,6 +287,16 @@
                                 right: 10px
 
     /* Content */
+    // Page Info
+    .page-info
+        text-align: center
+        > div
+            float: none
+            &:last-child
+                margin-right: 20px
+        .clearfix
+            display: block
+
     .blog
         .item
             .item-image
