Адаптивность информации о странице.

--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -253,6 +253,18 @@
             max-width: 300px
         .mobile-buttons-menu
             margin-top: 0
+
+    // Page Info
+    .page-info
+        text-align: center
+        > div
+            float: none
+            &:last-child
+                margin-right: 20px
+        .clearfix
+            display: block
+
+    /* Footer */
     footer
         .social-links
             ul
@@ -287,15 +299,6 @@
                                 right: 10px
 
     /* Content */
-    // Page Info
-    .page-info
-        text-align: center
-        > div
-            float: none
-            &:last-child
-                margin-right: 20px
-        .clearfix
-            display: block
 
     .blog
         .item
