--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -84,7 +84,6 @@ body
     &.widget-related
         .item
             position: relative
-            margin-bottom: 20px
             .item-image
                 margin-bottom: 10px
 
@@ -539,7 +538,7 @@ body
         a:hover, a:hover i, a:hover .fa
             color: $accent-color
         a:hover span
-            text-decoration: underline
+            text-decoration: none
 // End Widgets
 
 // Comments
@@ -556,10 +555,20 @@ body
         width: calc(100% - 70px)
 
     .like-dislike
+        position: relative
         margin-top: 10px
+        padding-top: 28px
         text-align: center
         .total-count
+            position: absolute
+            top: 0
+            left: 50%
+            margin: 0
+            padding: 0
             font-size: em(20px)
+            .count
+                position: relative
+                left: -50%
         button
             height: 20px
             float: left
@@ -629,13 +638,13 @@ body
     display: inline-block
     width: 100%
     margin-bottom: 20px
-    padding: 0 70px 0 0
     > .comment
         margin-bottom: 20px
         &:last-child
             margin-bottom: 0
     .comments-list
         margin: 20px 0 0 70px
+        width: calc(100% - 70px)
         padding: 0
         .comment-container
             background: #f0f0f0
