Профиль пользователя (ссылки на профиль, разметка левой колонки и статистики в профиле).

--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -743,5 +743,24 @@ footer
         display: table-row
         vertical-align: middle
 
+/* USER PROFILE */
+.user-sidebar
+    background: $light-color
+    margin-top: 50px //
+    .user-info
+        display: inline-block
+        width: 100%
+        margin-bottom: 20px
+        .user-avatar
+            display: inline-block
+            width: 100%
+            position: relative
+            margin-top: -50px //
+            text-align: center
+            .avatar
+                float: none
+                width: auto
+                max-width: 140px
+                border-radius: 5px
 
 @import "media"
