--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -317,6 +317,12 @@
                     margin-bottom: 5px
             .item-info
                 margin-top: 25px
+
+    /* USER PROFILE */
+    .info-list
+        .item
+            width: 100%
+
     /* Footer */
     footer
         .social-links
