Исправление отображения логотипов (в header и footer) для WindowsPhone IE. Исправление ширины полей input для WindowsPhone IE. "Свежие" -> "Новые" в sidebar.

--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -716,6 +716,8 @@ body
 footer
     padding: 30px 0 50px 0
     color: $gray-color !important
+    .logo
+        height: 100%
     .first-column
         margin-left: 25px
     .copyright
