--- a/app/header.sass
+++ b/app/header.sass
@@ -184,6 +184,7 @@
     margin-bottom: 24px
     .logo
         margin: 20px 0
+        height: 100%
     h1
         margin-top: 28px
         float: left
