--- a/app/sass/_base.sass
+++ b/app/sass/_base.sass
@@ -196,6 +196,7 @@ button::-moz-focus-inner
 button
     svg
         width: 30px
+        height: 30px
         .close-x
             stroke: $gray-color
             fill: transparent
@@ -270,7 +271,6 @@ a.small-description
 
 // Images
 img, .image
-    display: inline-block
     max-width: 100%
     &.avatar
         border-radius: 50%
@@ -279,6 +279,8 @@ img, .image
             width: 22px
         &.mini
             width: 50px
+svg
+    max-height: 100%
 
 // Margins and Paddings
 .m-t-20
@@ -422,6 +424,7 @@ label
     font-family: $title-font
     float: left
 input, textarea
+    display: inline-block
     line-height: 36px
     background: #e9e9e9 // #e1e1e1
     border: 1px solid #eeeeee
@@ -431,6 +434,8 @@ input, textarea
     width: 100%
     &:hover, &:focus
         background: #ececec
+input
+    height: 38px
 
 .white-form
     input, textarea
