--- a/app/sass/_base.sass
+++ b/app/sass/_base.sass
@@ -495,7 +495,7 @@ input
 .dropdown
     position: relative
     &.active
-        > .dropdown-arrow
+        .dropdown-arrow
             position: relative
             &:after
                 content: ""
