Профиль пользователя: редактирование (начало).

--- a/app/sass/_base.sass
+++ b/app/sass/_base.sass
@@ -156,6 +156,11 @@ button::-moz-focus-inner
         border: 1px solid rgba(255, 255, 255, 0.1)
     &.circle-button
         border-radius: 50%
+    span
+        text-decoration: none
+    &:hover
+        span
+            color: inherit
 
 .button-group
     .button
@@ -283,6 +288,8 @@ svg
     max-height: 100%
 
 // Margins and Paddings
+.m-t--5
+    margin-top: -5px
 .m-t-20
     margin-top: 20px
 .m-b-0
@@ -295,6 +302,10 @@ svg
     margin-bottom: 30px
 .m-l-5
     margin-left: 5px
+.m-l-10
+    margin-left: 10px
+.m-l-20
+    margin-left: 20px
 .m-l-30
     margin-left: 30px
 .m-l-50
