Профиль пользователя: редактирование (подключение dropify).

--- a/app/sass/_libs.sass
+++ b/app/sass/_libs.sass
@@ -2,3 +2,4 @@
 
 @import "../libs/font-awesome/css/font-awesome"
 @import "../libs/iCheck/skins/flat/blue.css"
+@import "../libs/dropify/dist/css/dropify.css"
