Исправление отображения логотипа (подключение библиотеки is.js для определения Windows Phone).

--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -713,11 +713,15 @@ body
 // End Comments
 
 // Footer
+body.is-windows-phone
+    footer
+        .logo
+            height: 100%
 footer
     padding: 30px 0 50px 0
     color: $gray-color !important
     .logo
-        height: 100%
+        height: auto
     .first-column
         margin-left: 25px
     .copyright
