--- a/app/header.sass
+++ b/app/header.sass
@@ -181,11 +181,14 @@
 // End HeaderWidger
 
 // Header
+body.is-windows-phone
+    #header
+        .logo
+            height: 100%
 #header
     margin-bottom: 24px
     .logo
         margin: 20px 0
-        height: 100%
     h1
         margin-top: 28px
         float: left
