--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -20,22 +20,21 @@ body
 
 .slideout-panel
     position: relative
-    z-index: 1
+    z-index: 99999
     will-change: transform
 
 .slideout-open,
 .slideout-open body,
 .slideout-open .slideout-panel
     overflow: hidden
+    height: 100%
 
 .slideout-open .slideout-menu
     display: block
 
-.slideout-open .slideout-panel
-
 #menu
     font-size: 16px
-    box-shadow: 10px 10px 10px rgba(0, 0, 0, 1)
+    //box-shadow: 10px 10px 10px rgba(0, 0, 0, 1)
     padding: 12px 20px 20px
     .menu-close-button
         position: absolute
