Исправление slideout.js.

--- a/app/header.sass
+++ b/app/header.sass
@@ -80,7 +80,7 @@
             i, .fa
                 line-height: 1
             .container-header
-                padding: 5px 11px 10px
+                padding: 0 11px 10px
                 i, .fa
                     color: $dark-color
             .container-body
@@ -331,6 +331,9 @@ body.is-windows-phone
 // mobile menu
 #menu
     display: none
+.slideout-open
+    #menu
+        display: block
 .mobile-buttons-menu
     margin-top: 20px
     button
