Шрифты (RobotoItalc, RobotoBoldItalic).

--- a/app/sass/fonts.sass
+++ b/app/sass/fonts.sass
@@ -2,10 +2,7 @@
 
 +font-face("RobotoCondensed", "../fonts/RobotoCondensedRegular/RobotoCondensedRegular", $file-formats: eot woff ttf)
 
-+font-face("Roboto", "../fonts/Roboto/RobotoRegular/RobotoRegular", 400, normal, $file-formats: eot woff ttf)
-+font-face("Roboto", "../fonts/Roboto/RobotoBold/RobotoBold", 400, italic, $file-formats: eot woff ttf)
-
-//+font-face("Helvetica", "../fonts/Helvetica/HelveticaRegular/HelveticaRegular", 400, normal, $file-formats: eot woff ttf)
-//+font-face("Helvetica", "../fonts/Helvetica/HelveticaItalic/HelveticaItalic", 400, italic, $file-formats: eot woff ttf)
-//+font-face("Helvetica", "../fonts/Helvetica/HelveticaBold/HelveticaBold", bold, normal, $file-formats: eot woff ttf)
-//+font-face("Helvetica", "../fonts/Helvetica/HelveticaBoldItalic/HelveticaBoldItalic", bold, italic, $file-formats: eot woff ttf)
++font-face("Roboto", "../fonts/RobotoRegular/RobotoRegular", 400, normal, $file-formats: eot woff ttf)
++font-face("Roboto", "../fonts/RobotoBold/RobotoBold", bold, normal, $file-formats: eot woff ttf)
++font-face("Roboto", "../fonts/RobotoItalic/Robotoitalic", 400, italic, $file-formats: eot woff ttf)
++font-face("Roboto", "../fonts/RobotoBoldItalic/Robotobolditalic", bold, italic, $file-formats: eot woff ttf)
