--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -711,6 +711,38 @@ body
             color: $accent-color
 // End Comments
 
+// Tree
+ul.tree
+    padding: 10px 20px
+    margin: 0 20px
+    border-left: 3px solid #e1e0e4
+    li
+        display: inline-block
+        width: 100%
+        margin: 2px 0
+        a
+            position: relative
+            text-decoration: none
+            color: $dark-color
+            &:hover
+                color: $accent-color
+            &:before
+                content: ''
+                display: inline-block
+                position: absolute
+                top: calc(50% - 2px)
+                left: -20px
+                width: 12px
+                height: 3px
+                background: #e1e0e4
+        ul
+            display: inline-block
+            width: 100%
+            padding: 10px 20px
+            margin: 0 20px
+            border-left: 3px solid #e1e0e4
+
+
 // Footer
 body.is-windows-phone
     footer
@@ -737,32 +769,7 @@ footer
         margin-top: 24px
         i, .fa
             color: #ffffff
-
 // End Footer
-
-// Mobile Popups
-.mobile-popup
-    display: table
-    position: fixed
-    top: 0
-    left: 0
-    width: 100vw
-    height: 100vh
-    background-color: rgba(255, 255, 255, 0.99)
-    transition: all 0.5s ease-in-out
-    transform: translate(0px, -100%) scale(0, 0)
-    opacity: 0
-    &.open
-        transform: translate(0px, 0px) scale(1, 1)
-        opacity: 1
-    .popup-close-button
-        position: absolute
-        top: 7px
-        right: 10px
-    .popup-header,
-    .popup-content
-        display: table-row
-        vertical-align: middle
 
 /* USER PROFILE */
 .user-sidebar
