--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -735,6 +735,7 @@ ul.tree
                 width: 12px
                 height: 3px
                 background: #e1e0e4
+                border-bottom: 1px solid #ffffff
         ul
             display: inline-block
             width: 100%
