--- a/app/sass/_base.sass
+++ b/app/sass/_base.sass
@@ -91,6 +91,8 @@ h1 a, h2 a, h3 a, h4 a, h5 a, h6 a,
         margin-right: 0
         margin-left: 7px
 a
+    &:focus
+        text-decoration: none
     i:hover, .fa:hover
         color: $accent-color
 i:only-child, .fa:only-child
@@ -102,7 +104,7 @@ a, button
     text-decoration: underline
     span
         text-decoration: underline
-    &:hover, &:focus, &.active
+    &:hover, &.active
         color: $accent-color
         text-decoration: none
         span, i, .fa
@@ -152,14 +154,16 @@ button::-moz-focus-inner
     text-align: center
     border-radius: 2px
     border: 1px solid rgba(255, 255, 255, 0.15)
+    white-space: nowrap
     &:hover, &:focus, &:active
         border: 1px solid rgba(255, 255, 255, 0.1)
     &.circle-button
         border-radius: 50%
     span
         text-decoration: none
-    &:hover
+    &:hover, &.active
         span
+            text-decoration: none
             color: inherit
 
 .button-group
@@ -176,27 +180,47 @@ button::-moz-focus-inner
     background: #e7e7e7
     i, .fa
         color: $dark-color !important
-    &:hover, &:focus, &:active
+    &:hover, &:focus, &.active
         color: $dark-color
         background: #eeeeee
+    &.dashed-button
+        color: $dark-color
+        &:hover, &.active
+            color: $dark-color
 
 .accent-button
     color: #ffffff
     background: $accent-color
     i, .fa
         color: #ffffff !important
-    &:hover, &:focus, &:active
+    &:hover, &:focus, &.active
         color: #ffffff
         background: $accent-color-dark
+    &.dashed-button
+        color: $accent-color
+        &:hover, &.active
+            color: #ffffff
 
 .dark-button
     color: #ffffff
     background: $dark-color
     i, .fa
         color: #ffffff !important
-    &:hover, &:focus, &:active
+    &:hover, &:focus, &.active
         color: #ffffff
         background: #1F3245
+    &.dashed-button
+        color: $dark-color
+        &:hover, &.active
+            color: #ffffff
+
+.dashed-button
+    background: none
+    span
+        border-bottom: 1px dashed
+    &.active, &:hover
+        span
+            border-bottom: none
 
 button
     svg
@@ -234,7 +258,7 @@ ul.horisontal
     left: 0
 
 p
-    margin: 0 0 20px
+    margin: 0 0 15px
 .font-20
     font-size: em(20px)
 .small
