--- a/app/sass/_base.sass
+++ b/app/sass/_base.sass
@@ -214,7 +214,8 @@ button::-moz-focus-inner
         &:hover, &.active
             color: #ffffff
 
-.dashed-button
+.dashed-button,
+.dashed-button:focus
     background: none
     span
         border-bottom: 1px dashed
