--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -466,6 +466,7 @@ body
     .item
         position: relative
         display: inline-block
+        float: left
         border-top: 1px solid #ffffff
         border-bottom: 1px solid #eeeeee
         padding-top: 25px
@@ -479,6 +480,9 @@ body
                 width: 100%
                 margin-left: 0
                 margin-top: 0
+            .item-text
+                p:last-of-type
+                    margin-bottom: 20px
         .item-image
             float: left
             width: calc(35% - 25px)
